--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
