--- a/_index.html
+++ b/_index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Витале Якимо | Фотограф в Рязани</title>
     <meta name="description" content="Профессиональный фотограф Витале Якимо. Портретная и семейная съёмка в Рязани. Портфолио, цены, запись онлайн.">
-    <link rel="canonical" href="https://vitaleyakimo.github.io/">
+    <link rel="canonical" href="https://bv7v2.github.io/Site/">
+
     <!-- Open Graph -->
     <meta property="og:title" content="Витале Якимо — Фотограф в Рязани">
     <meta property="og:description" content="Портретная и семейная фотография в Рязани. Портфолио и цены.">
     <meta property="og:image" content="https://i.ibb.co/JjvDKHJH/0004.webp">
-    <meta property="og:url" content="https://vitaleyakimo.github.io/">
+    <meta property="og:url" content="https://bv7v2.github.io/Site/">
     <meta property="og:type" content="website">
+
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- PWA Manifest -->
@@ -19,6 +21,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header class="hero" role="banner">
         <div class="overlay"></div>
         <div class="hero-content">
@@ -41,11 +44,6 @@
 
     <footer role="contentinfo">
         <p>&copy; 2025 Витале Якимо. Все права защищены.</p>
-        <p style="margin-top: 12px; font-size: 0.95rem;">
-            <a href="/prices.html" style="color: #4fc3f7; text-decoration: none; margin: 0 8px;">Цены</a> •
-            <a href="/about.html" style="color: #4fc3f7; text-decoration: none; margin: 0 8px;">Обо мне</a> •
-            <a href="/reviews.html" style="color: #4fc3f7; text-decoration: none; margin: 0 8px;">Отзывы</a>
-        </p>
     </footer>
 
     <!-- Модальное окно: полноэкранный слайдер -->
