--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
     <header class="hero" role="banner">
         <div class="overlay"></div>
         <div class="hero-content">
-            <h1>Фотограф в Рязани — Витале Якимо</h1>
-            <p>Портретная и семейная фотосъёмка</p>
-            <a href="#portfolios" class="hero-portfolio-link">Портфолио</a>
-        </div>
+			<h1>Фотограф в Рязани — Витале Якимо</h1>
+			<p>Портретная и семейная фотосъёмка</p>
+			<div class="hero-nav">
+				<a href="#portfolios" class="hero-nav-link">Портфолио</a>
+				<a href="/prices.html" class="hero-nav-link">Цены</a>
+				<a href="/about.html" class="hero-nav-link">Обо мне</a>
+				<a href="/reviews.html" class="hero-nav-link">Отзывы</a>
+			</div>
+		</div>
     </header>
 
     <main>
