--- a/index.html
+++ b/index.html
@@ -34,23 +34,35 @@
     </header>
 
     <main>
-        <section class="portfolios" id="portfolios"></section>
+		<section class="portfolios" id="portfolios"></section>
+	
+		<!-- Навигационные кнопки перед контактом -->
+		<section class="footer-nav-section" style="text-align: center; padding: 30px 20px;">
+			<div class="hero-nav" style="display: flex; gap: 12px; flex-wrap: wrap; justify-content: center; font-size: 0.95rem;">
+				<a href="#portfolios" class="hero-nav-link">Портфолио</a>
+				<a href="/about.html" class="hero-nav-link">Обо мне</a>
+				<a href="/prices.html" class="hero-nav-link">Цены</a>
+				<a href="/reviews.html" class="hero-nav-link">Отзывы</a>
+			</div>
+		</section>
 
-        <section class="contact-footer" aria-labelledby="contact-heading">
-            <h2 id="contact-heading">Связаться</h2>
-            <p>📧 <a href="mailto:bv72006@ya.ru">bv72006@ya.ru</a></p>
-            <p>📱 <a href="tel:+79194545542">+7 (919) 454-55-42</a></p>
-            <p>📍 Рязань, Россия</p>
-        </section>
-    </main>
+		<section class="contact-footer" aria-labelledby="contact-heading">
+			<h2 id="contact-heading">Связаться</h2>
+			<p>📧 <a href="mailto:bv72006@ya.ru">bv72006@ya.ru</a></p>
+			<p>📱 <a href="tel:+79194545542">+7 (919) 454-55-42</a></p>
+			<p>📍 Рязань, Россия</p>
+		</section>
+	</main>
 
     <footer role="contentinfo">
         <p>&copy; 2025 Витале Якимо. Все права защищены.</p>
-        <p style="margin-top: 12px; font-size: 0.95rem;">
+        <!--
+		<p style="margin-top: 12px; font-size: 0.95rem;">
             <a href="/prices.html" style="color: #4fc3f7; text-decoration: none; margin: 0 8px;">Цены</a> •
             <a href="/about.html" style="color: #4fc3f7; text-decoration: none; margin: 0 8px;">Обо мне</a> •
             <a href="/reviews.html" style="color: #4fc3f7; text-decoration: none; margin: 0 8px;">Отзывы</a>
         </p>
+		-->
     </footer>
 
     <!-- Модальное окно: полноэкранный слайдер -->
