--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
         <figure style="margin: 30px 0; text-align: center;">
             <img src="https://i.ibb.co/JjvDKHJH/0004.webp" alt="Фотограф Витале Якимо за работой в Рязани" style="max-width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-            <figcaption style="margin-top: 10px; font-style: italic; color: #666;">За работой в парке Солотчи, Рязань</figcaption>
+            <figcaption style="margin-top: 10px; font-style: italic; color: #666;">Семейная фотосессия, Рязань</figcaption>
         </figure>
 
         <h2 style="font-size: 1.8rem; margin: 30px 0 20px;">Почему выбирают меня?</h2>
@@ -41,12 +41,14 @@
             <li>Работаю с естественным светом и студийным оборудованием</li>
             <li>Фото обрабатываю вручную — без шаблонных фильтров</li>
         </ul>
-
+		
+		<!-- публикации
         <h2 style="font-size: 1.8rem; margin: 30px 0 20px;">Мои работы публиковались в:</h2>
         <ul style="padding-left: 20px; margin-bottom: 30px;">
             <li>Журнал «Рязанский стиль»</li>
             <li>Проект «Люди Рязани»</li>
-        </ul>
+        </ul> 
+		-->
 
         <p style="font-size: 1.2rem;">
             Готов запечатлеть вашу историю — красиво, честно и тепло.
