--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
 <main>
-    <!-- <section class="portfolios" id="portfolios"></section> -->
+    <section class="portfolios" id="portfolios"></section>
 
 	<section class="contact-footer" aria-labelledby="contact-heading">
 		<h2 id="contact-heading">Связаться</h2>
