--- a/reviews.html
+++ b/reviews.html
@@ -46,15 +46,24 @@
                 Напишите мне на <a href="mailto:bv72006@ya.ru">почту</a> или в <a href="https://t.me/...">Telegram</a> — буду рад!
             </p>
         </section>
+		
+		<section class="contact-footer" style="background: #222; color: #fff; text-align: center; padding: 50px 20px; margin-top: 40px;">
+			<h2 style="font-size: 1.8rem; margin-bottom: 20px;">Связаться</h2>
+			<p>📧 <a href="mailto:bv72006@ya.ru" style="color: #4fc3f7; text-decoration: none;">bv72006@ya.ru</a></p>
+			<p>📱 <a href="tel:+79194545542" style="color: #4fc3f7; text-decoration: none;">+7 (919) 454-55-42</a></p>
+			<p>📍 Рязань, Россия</p>
+
+			<div class="footer-nav">
+				<a href="/" class="footer-nav-link">Портфолио</a>
+				<a href="/about.html" class="footer-nav-link">Обо мне</a>
+				<a href="/prices.html" class="footer-nav-link">Цены</a>
+				<a href="/reviews.html" class="footer-nav-link">Отзывы</a>
+			</div>
+		</section>
     </main>
 
     <footer role="contentinfo" style="text-align: center; padding: 20px; background: #222; color: #fff; margin-top: 40px;">
         <p>&copy; 2025 Витале Якимо. Все права защищены.</p>
-        <p style="margin-top: 10px;">
-            <a href="/" style="color: #4fc3f7; text-decoration: none;">Главная</a> •
-            <a href="/prices.html" style="color: #4fc3f7; text-decoration: none;">Цены</a> •
-            <a href="/about.html" style="color: #4fc3f7; text-decoration: none;">Обо мне</a>
-        </p>
     </footer>
 </body>
 </html>
