--- a/reviews.html
+++ b/reviews.html
@@ -46,8 +46,9 @@
                 Напишите мне на <a href="mailto:bv72006@ya.ru">почту</a> или в <a href="https://t.me/...">Telegram</a> — буду рад!
             </p>
         </section>
-		
-		<section class="contact-footer" style="background: #222; color: #fff; text-align: center; padding: 50px 20px; margin-top: 40px;">
+	</main>
+	
+		<section class="contact-footer" aria-labelledby="contact-heading">
 			<h2 style="font-size: 1.8rem; margin-bottom: 20px;">Связаться</h2>
 			<p>📧 <a href="mailto:bv72006@ya.ru" style="color: #4fc3f7; text-decoration: none;">bv72006@ya.ru</a></p>
 			<p>📱 <a href="tel:+79194545542" style="color: #4fc3f7; text-decoration: none;">+7 (919) 454-55-42</a></p>
@@ -60,7 +61,6 @@
 				<a href="/reviews.html" class="footer-nav-link">Отзывы</a>
 			</div>
 		</section>
-    </main>
 
     <footer role="contentinfo" style="text-align: center; padding: 20px; background: #222; color: #fff; margin-top: 40px;">
         <p>&copy; 2025 Витале Якимо. Все права защищены.</p>
