--- a/prices.html
+++ b/prices.html
@@ -29,10 +29,10 @@
             <h2 style="text-align: center; font-size: 2rem; margin-bottom: 20px;">Портретная съёмка</h2>
             <ul style="list-style: none; padding: 0;">
                 <li style="background: #fff; padding: 16px; margin-bottom: 12px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-                    <strong>1 час</strong> — 3 500 ₽ (30 готовых фото)
+                    <strong>1 час</strong> — 2 000 ₽ (от 30 готовых фото)
                 </li>
                 <li style="background: #fff; padding: 16px; margin-bottom: 12px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-                    <strong>2 часа</strong> — 5 500 ₽ (60 готовых фото)
+                    <strong>2 часа</strong> — 5 000 ₽ (от 60 готовых фото)
                 </li>
                 <li style="background: #fff; padding: 16px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
                     Место: студия или локация в Рязани по вашему выбору
@@ -44,7 +44,7 @@
             <h2 style="text-align: center; font-size: 2rem; margin-bottom: 20px;">Семейная фотосессия</h2>
             <ul style="list-style: none; padding: 0;">
                 <li style="background: #fff; padding: 16px; margin-bottom: 12px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-                    <strong>1.5 часа</strong> — 6 000 ₽ (50 готовых фото)
+                    <strong>1 час</strong> — 2 500 ₽ (от 30 готовых фото)
                 </li>
                 <li style="background: #fff; padding: 16px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
                     Включено: работа с детьми, естественные эмоции, 2 локации
@@ -56,9 +56,10 @@
             <h2 style="text-align: center; font-size: 2rem; margin-bottom: 20px;">Что входит в стоимость:</h2>
             <ul style="padding-left: 20px; font-size: 1.1rem;">
                 <li>Профессиональная ручная обработка всех фото</li>
-                <li>Доставка в электронном виде (Google Drive или Telegram)</li>
+                <li>Фото вы получите через персональный сайт фотографа</li>
                 <li>Консультация по образу, стилю и выбору локации</li>
-                <li>Никаких доплат за количество участников</li>
+                <li>Стандартная съёмка (до 2 человек + 2 детей до 12 лет)</li>
+				<li>каждый последующий участник — +500 ₽</li>
             </ul>
         </section>
 
@@ -66,7 +67,7 @@
             <h2>Как записаться?</h2>
             <p style="font-size: 1.2rem; margin: 16px 0;">
                 Напишите мне в <a href="mailto:bv72006@ya.ru">почту</a> или позвоните:<br>
-                <a href="tel:+79194545542">+7 (919) 454-55-42</a>
+                <a href="tel:+79194545542">+7 (933) 113-55-42</a>
             </p>
             <p>Уточните: тип съёмки, желаемую дату и количество участников.</p>
         </section>
