--- a/prices.html
+++ b/prices.html
@@ -32,10 +32,10 @@
                     <strong>1 час</strong> — 2 000 ₽ (от 30 готовых фото)
                 </li>
                 <li style="background: #fff; padding: 16px; margin-bottom: 12px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-                    <strong>2 часа</strong> — 5 000 ₽ (от 60 готовых фото)
+                    <strong>2 часа</strong> — 3 000 ₽ (от 60 готовых фото)
                 </li>
                 <li style="background: #fff; padding: 16px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-                    Место: студия или локация в Рязани по вашему выбору
+                    Место: студия или локация в Рязани по вашему выбору.
                 </li>
             </ul>
         </section>
@@ -60,6 +60,7 @@
                 <li>Консультация по образу, стилю и выбору локации</li>
                 <li>Стандартная съёмка (до 2 человек + 2 детей до 12 лет)</li>
 				<li>каждый последующий участник — +500 ₽</li>
+				<li>Аренда студия в стоимость фотосесии не входит.</li>
             </ul>
         </section>
 
