--- a/prices.html
+++ b/prices.html
@@ -60,7 +60,7 @@
                 <li>Консультация по образу, стилю и выбору локации</li>
                 <li>Стандартная съёмка (до 2 человек + 2 детей до 12 лет)</li>
 				<li>каждый последующий участник — +500 ₽</li>
-				<li>Аренда студия в стоимость фотосесии не входит.</li>
+				<li>Аренда студии в стоимость фотосесии не входит.</li>
             </ul>
         </section>
 
