--- a/prices.html
+++ b/prices.html
@@ -25,7 +25,10 @@
     </header>
 
     <main style="padding: 40px 20px; max-width: 900px; margin: 0 auto;">
-        <section style="margin-bottom: 40px;">
+        
+		<!-- портрет -->
+		
+		<section style="margin-bottom: 40px;">
             <h2 style="text-align: center; font-size: 2rem; margin-bottom: 20px;">Портретная съёмка</h2>
             <ul style="list-style: none; padding: 0;">
                 <li style="background: #fff; padding: 16px; margin-bottom: 12px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
@@ -40,6 +43,8 @@
             </ul>
         </section>
 
+		<!-- семья -->
+
         <section style="margin-bottom: 40px;">
             <h2 style="text-align: center; font-size: 2rem; margin-bottom: 20px;">Семейная фотосессия</h2>
             <ul style="list-style: none; padding: 0;">
@@ -47,10 +52,33 @@
                     <strong>1 час</strong> — 2 500 ₽ (от 30 готовых фото)
                 </li>
                 <li style="background: #fff; padding: 16px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-                    Включено: работа с детьми, естественные эмоции, 2 локации
+                    Включено: работа с детьми, естественные эмоции
                 </li>
             </ul>
         </section>
+		
+		<!-- TFP -->
+		
+		<section style="margin-bottom: 40px;">
+			<h2 style="text-align: center; font-size: 2rem; margin-bottom: 20px;">TFP фотосессия</h2>
+			<ul style="list-style: none; padding: 0;">
+				<li style="background: #fff; padding: 16px; margin-bottom: 12px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+					<strong>Бесплатно</strong> (обмен работой: вы получаете фото для портфолио или личного архива, я — кадры для своего творческого архива)
+				</li>
+				<li style="background: #fff; padding: 16px; margin-bottom: 12px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+					<strong>1–2 часа</strong> — от 30–60 готовых фото
+				</li>
+				<li style="background: #fff; padding: 16px; margin-bottom: 12px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+					Место: студия или локация в Рязани по согласованию
+				</li>
+				<li style="background: #fff; padding: 16px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+					Включено: совместная разработка образа и настроения съёмки, дружелюбная и вдохновляющая атмосфера
+				</li>
+			</ul>
+			<p style="text-align: center; margin-top: 16px; color: #555; font-size: 0.95rem;">
+				TFP открыт для всех — независимо от опыта, профессии или целей. Хотите попробовать себя перед камерой, создать личное портфолио или просто сделать красивые фото? Давайте снимать вместе!
+			</p>
+		</section>
 
         <section style="margin-bottom: 40px;">
             <h2 style="text-align: center; font-size: 2rem; margin-bottom: 20px;">Что входит в стоимость:</h2>
