--- a/reviews.html
+++ b/reviews.html
@@ -43,7 +43,7 @@
         <section style="text-align: center; margin-top: 40px;">
             <h2>Хотите оставить отзыв?</h2>
             <p style="font-size: 1.2rem; margin: 16px 0;">
-                Напишите мне на <a href="mailto:bv72006@ya.ru">почту</a> или в <a href="https://t.me/...">Telegram</a> — буду рад!
+                Напишите мне на <a href="mailto:bv72006@ya.ru">почту</a> или в <a href="https://t.me/vyakimo">Telegram</a> — буду рад!
             </p>
         </section>
 	</main>
