--- a/reviews.html
+++ b/reviews.html
@@ -39,13 +39,20 @@
             «Фотосессия прошла легко и непринуждённо. Не ожидала, что получу столько искренних кадров. Спасибо за тёплую атмосферу!»
             <footer style="margin-top: 16px; font-weight: 600; font-style: normal; color: #222;">— Игорь, мужской портрет, сентябрь 2024</footer>
         </blockquote>
-
+		<!--
         <section style="text-align: center; margin-top: 40px;">
             <h2>Хотите оставить отзыв?</h2>
             <p style="font-size: 1.2rem; margin: 16px 0;">
                 Напишите мне на <a href="mailto:bv72006@ya.ru">почту</a> или в <a href="https://t.me/vyakimo">Telegram</a> — буду рад!
             </p>
         </section>
+		-->
+		<section style="text-align: center; margin-top: 40px;">
+			<h2>Хотите оставить отзыв?</h2>
+			<p style="font-size: 1.2rem; margin: 16px 0;">
+				Напишите мне на <a href="mailto:bv72006@ya.ru" target="_blank" rel="noopener noreferrer">почту</a> или в <a href="https://t.me/vyakimo" target="_blank" rel="noopener noreferrer">Telegram</a> — буду рад!
+			</p>
+		</section>
 	</main>
 	
 		<section class="contact-footer" aria-labelledby="contact-heading">
