--- a/prices.html
+++ b/prices.html
@@ -92,6 +92,7 @@
             </ul>
         </section>
 
+<!--
         <section style="text-align: center; background: #f0f8ff; padding: 24px; border-radius: 12px;">
             <h2>Как записаться?</h2>
             <p style="font-size: 1.2rem; margin: 16px 0;">
@@ -100,6 +101,19 @@
             </p>
             <p>Уточните: тип съёмки, желаемую дату и количество участников.</p>
         </section>
+-->
+		
+		<section style="text-align: center; background: #f0f8ff; padding: 24px; border-radius: 12px;">
+			<h2>Как записаться?</h2>
+			<p style="font-size: 1.2rem; margin: 16px 0;">
+				Напишите мне в 
+				<a href="mailto:bv72006@ya.ru" target="_blank" rel="noopener noreferrer">почту</a>, 
+				в <a href="https://t.me/vyakimo" target="_blank" rel="noopener noreferrer">Telegram (@vyakimo)</a> 
+				или позвоните:<br>
+				<a href="tel:+79194545542">+7 (919) 454-55-42</a>
+			</p>
+			<p>Уточните: тип съёмки, желаемую дату и количество участников.</p>
+		</section>
 	
 	</main>
 		<section class="contact-footer" aria-labelledby="contact-heading">
