--- a/index.html
+++ b/index.html
@@ -36,19 +36,20 @@
 <main>
     <section class="portfolios" id="portfolios"></section>
 
-	<section class="contact-footer" aria-labelledby="contact-heading">
-		<h2 id="contact-heading">Связаться</h2>
-		<p>📧 <a href="mailto:bv72006@ya.ru">bv72006@ya.ru</a></p>
-		<p>📱 <a href="tel:+79194545542">+7 (919) 454-55-42</a></p>
-		<p>📍 Рязань, Россия</p>
-	
-		<div class="footer-nav">
-			<a href="#portfolios" class="footer-nav-link">Портфолио</a>
-			<a href="/about.html" class="footer-nav-link">Обо мне</a>
-			<a href="/prices.html" class="footer-nav-link">Цены</a>
-			<a href="/reviews.html" class="footer-nav-link">Отзывы</a>
-		</div>
-	</section>
+		<section class="contact-footer" aria-labelledby="contact-heading">
+			<h2 style="font-size: 1.8rem; margin-bottom: 20px;">Связаться</h2>
+			<p>📧 <a href="mailto:bv72006@ya.ru" style="color: #4fc3f7; text-decoration: none;">bv72006@ya.ru</a></p>
+			<p>📱 <a href="tel:+79194545542" style="color: #4fc3f7; text-decoration: none;">+7 (919) 454-55-42</a></p>
+			<p>💬 <a href="https://t.me/vyakimo" target="_blank" rel="noopener noreferrer" style="color: #4fc3f7; text-decoration: none;">@vyakimo</a></p>
+			<p>📍 Рязань, Россия</p>
+
+			<div class="footer-nav">
+				<a href="/" class="footer-nav-link">Портфолио</a>
+				<a href="/about.html" class="footer-nav-link">Обо мне</a>
+				<a href="/prices.html" class="footer-nav-link">Цены</a>
+				<a href="/reviews.html" class="footer-nav-link">Отзывы</a>
+			</div>
+		</section>
 </main>
 
 <footer role="contentinfo">
