--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<h2 style="font-size: 1.8rem; margin-bottom: 20px;">Связаться</h2>
 			<p>📧 <a href="mailto:bv72006@ya.ru" style="color: #4fc3f7; text-decoration: none;">bv72006@ya.ru</a></p>
 			<p>📱 <a href="tel:+79194545542" style="color: #4fc3f7; text-decoration: none;">+7 (919) 454-55-42</a></p>
-			<p>💬 <a href="https://t.me/vyakimo" target="_blank" rel="noopener noreferrer" style="color: #4fc3f7; text-decoration: none;">@vyakimo</a></p>
+			<p>💬 <a href="https://t.me/vyakimo" target="_blank" rel="noopener noreferrer" style="color: #4fc3f7; text-decoration: none;">Telegram (@vyakimo)</a></p>
 			<p>📍 Рязань, Россия</p>
 
 			<div class="footer-nav">
