--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<h1>Фотограф в Рязани — Витале Якимо</h1>
 			<p>Портретная и семейная фотосъёмка</p>
 			<div class="hero-nav">
+				<a href="/booking.html" class="hero-nav-link">Записаться</a>
 				<a href="#portfolios" class="hero-nav-link">Портфолио</a>
 				<a href="/prices.html" class="hero-nav-link">Цены</a>
 				<a href="/about.html" class="hero-nav-link">Обо мне</a>
