--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 			<div class="footer-nav">
 				<a href="/" class="footer-nav-link">Портфолио</a>
-				<!-- <a href="/booking.html" class="hero-nav-link">Записаться</a> -->
+				<a href="/booking.html" class="hero-nav-link">Записаться</a>
 				<a href="/about.html" class="footer-nav-link">Обо мне</a>
 				<a href="/prices.html" class="footer-nav-link">Цены</a>
 				<a href="/reviews.html" class="footer-nav-link">Отзывы</a>
