--- a/reviews.html
+++ b/reviews.html
@@ -36,7 +36,7 @@
         </blockquote>
 
         <blockquote style="background: #fff; padding: 24px; margin-bottom: 30px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); font-style: italic; line-height: 1.7;">
-            «Фотосессия прошла легко и непринуждённо. Не ожидала, что получу столько искренних кадров. Спасибо за тёплую атмосферу!»
+            «Фотосессия прошла легко и непринуждённо. Не ожидал, что получу столько искренних кадров. Спасибо за тёплую атмосферу!»
             <footer style="margin-top: 16px; font-weight: 600; font-style: normal; color: #222;">— Игорь, мужской портрет, сентябрь 2024</footer>
         </blockquote>
 		<!--
